I think i finaly fixed problems found on small screen devices

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -77,7 +77,7 @@
     }
 
     main#home {
-        padding: 4rem 2rem 40px;
+        padding: 4rem 2rem 0px;
     }
 
     main#home h1 {
